post and delete work.

--- a/angular-src/src/app/component/add-todo/add-todo.component.html
+++ b/angular-src/src/app/component/add-todo/add-todo.component.html
@@ -9,8 +9,8 @@
       <input type="text" [(ngModel)]="newTodo.description" name="description" required>
     </div>
     <div>
-      <label for="Priority">Select Priority</label>
-      <select [(ngModel)]="newTodo.priority" name="Priority">
+      <label for="priority">Select Priority</label>
+      <select [(ngModel)]="newTodo.priority" name="priority">
         <option value="High">High Priority</option>
         <option value="Medium">Medium Priority</option>
         <option value="Low">Low Prioirty</option>
