Added normalize, markup for header, scss dir w/ partials.

--- a/angular-src/src/app/component/header/header.component.html
+++ b/angular-src/src/app/component/header/header.component.html
@@ -1,1 +1,17 @@
-<p>header works!</p>
+<header class="header">
+  <h1 class="header-title">{{title}}</h1>
+  <button class="header-burger">Burger</button>
+  <div class="header-bar-bottom"></div>
+</header>
+<nav>
+  <a href="">Calendar</a>
+  <a href="">Completed</a>
+  <a href="">Deleted</a>
+  <a href="">Background</a>
+  <ul>
+    <li><a href="">Dots</a></li>
+    <li><a href="">Zags</a></li>
+    <li><a href="">Blank</a></li>
+    <li><a href="">Upload Image</a></li>
+  </ul>
+</nav>
