--- a/angular-src/src/app/app.component.html
+++ b/angular-src/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div style="text-align:center">
-  <h1>{{title}}!</h1>
+<app-header></app-header>
+<main class="app">
   <app-todo-list></app-todo-list>
-</div>
+</main>
 <router-outlet></router-outlet>
