Header title and burger aligned

--- a/angular-src/src/app/app.component.html
+++ b/angular-src/src/app/app.component.html
@@ -1,5 +1,8 @@
-<app-header></app-header>
-<main class="app">
-  <app-todo-list></app-todo-list>
-</main>
+<div class="app-wrap">
+  <app-header></app-header>
+  <main>
+    <app-todo-list></app-todo-list>
+  </main>
+</div>
+
 <router-outlet></router-outlet>
