--- a/angular-src/src/app/component/header/header.component.html
+++ b/angular-src/src/app/component/header/header.component.html
@@ -1,9 +1,11 @@
 <header class="header">
-  <h1 class="header-title">{{title}}</h1>
-  <button class="header-burger">Burger</button>
+  <div class="header-wrap">
+    <h1 class="header-title">{{title}}</h1>
+    <button class="header-burger">Burger</button>
+  </div>
   <div class="header-bar-bottom"></div>
 </header>
-<nav>
+<nav class="nav">
   <a href="">Calendar</a>
   <a href="">Completed</a>
   <a href="">Deleted</a>
