--- a/angular-src/src/assets/scss/_vars.scss
+++ b/angular-src/src/assets/scss/_vars.scss
@@ -5,6 +5,7 @@ $color-true-black: #000000;
 $color-orange: #FEA64C;
 $color-fuschia: #FE1E9A;
 
+
 // :root {
 //   --color-white: #fdfdfd;
 //   --color-true-white: #ffffff;
@@ -20,3 +21,7 @@ $color-fuschia: #FE1E9A;
 // diagonal-up
 // diagonal-down
 // radial
+
+
+
+$grid-px-15: 15px;
