--- a/angular-src/src/app/component/header/header.component.scss
+++ b/angular-src/src/app/component/header/header.component.scss
@@ -4,7 +4,7 @@
 .header {
   position: relative;
   background: $color-white;
-  @include header-shadow;
+  @include add-shadow;
 
   &-wrap {
     display: flex;
