--- a/angular-src/src/assets/scss/_mixins.scss
+++ b/angular-src/src/assets/scss/_mixins.scss
@@ -26,7 +26,7 @@
   }
 }
 
-@mixin header-shadow() {
+@mixin add-shadow() {
   -webkit-box-shadow: -2px 8px 7px -3px rgba(0, 0, 0, 0.15);
   -moz-box-shadow: -2px 8px 7px -3px rgba(0, 0, 0, 0.15);
   box-shadow: -2px 8px 7px -3px rgba(0, 0, 0, 0.15);
