Footer added, click events added for buttons in footer, mobile slide out nav adjusted for fixed footer and header.

--- a/angular-src/src/assets/scss/_vars.scss
+++ b/angular-src/src/assets/scss/_vars.scss
@@ -3,7 +3,10 @@ $color-true-white: #ffffff;
 $color-black: #1b1b1b;
 $color-true-black: #000000;
 $color-orange: #FEA64C;
+$color-orange-dark: #FF6200;
 $color-fuschia: #FE1E9A;
+
+
 
 
 // :root {
