--- a/angular-src/src/app/component/header/header.component.scss
+++ b/angular-src/src/app/component/header/header.component.scss
@@ -2,7 +2,10 @@
 @import "mixins";
 
 .header {
-  position: relative;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  margin: 0;
   background: $color-white;
   @include add-shadow;
 
@@ -37,6 +40,7 @@
   @include add-linear-gradient('vertical', $color-orange, $color-fuschia);
   width: 100%;
   height: 100%;
+  margin-top: 81px;
 
   &.slide-in {
     -webkit-animation: slide-in 0.5s forwards;
