Create Modal opens and closes.

--- a/angular-src/src/app/component/footer/footer.component.html
+++ b/angular-src/src/app/component/footer/footer.component.html
@@ -15,7 +15,7 @@
           fill="url(#linear-gradient)" />
       </svg>
     </button>
-    <button class="footer-btn" (click)="addTodo()">
+    <button class="footer-btn" (click)="openCreateTodoModal()">
       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="36.007" height="36.008"
         viewBox="0 0 36.007 36.008">
         <defs>
