--- a/angular-src/src/app/component/todo-list/todo-list.component.html
+++ b/angular-src/src/app/component/todo-list/todo-list.component.html
@@ -20,4 +20,4 @@
         </td>
   </div> -->
 </section>
-<app-add-todo (addTodo)='onAddTodo($event)'></app-add-todo>
+<!-- <app-add-todo (addTodo)='onAddTodo($event)'></app-add-todo> -->
