--- a/angular-src/src/app/app.component.html
+++ b/angular-src/src/app/app.component.html
@@ -4,5 +4,6 @@
     <app-todo-list></app-todo-list>
   </main>
   <app-footer></app-footer>
+  <app-modal-create-todo (change)="toggleModal($evet)"></app-modal-create-todo>
 </div>
 <router-outlet></router-outlet>
