--- a/client/src/app/component/todo-list/todo-list.component.html
+++ b/client/src/app/component/todo-list/todo-list.component.html
@@ -1,11 +1,7 @@
 <h2>Current Todos</h2>
 <section class="todos">
-  <div class="todos-bar" *ngFor="let todo of todos">
-    <!-- <span *ngIf="todo.priority === High">High</span>
-    <span *ngIf="todo.priority === Medium">Medium</span>
-    <span *ngIf="todo.priority === Low">Low</span> -->
-
-    <span>{{todo.priority}}</span>
+  <div class="todos-bar" *ngFor="let todo of todos; let even = even; let odd = odd">
+    <span [className]="'priority '+ todo.priority.toLowerCase()"></span>
     <span>{{todo.title}}</span>
     <!-- <td>{{todo.description}}</td> -->
     <span>
