--- a/client/src/app/component/modal-create-todo/modal-create-todo.component.html
+++ b/client/src/app/component/modal-create-todo/modal-create-todo.component.html
@@ -1,104 +1,78 @@
-<div class="modal-create-todo" [class.open]="modalOpen" [class.close]="!modalOpen">
+<div
+  class="modal-create-todo"
+  [class.open]="modalOpen"
+  [class.close]="!modalOpen"
+>
   <div class="modal-dialog">
     <header class="modal-header">
       <h2>Create Todo</h2>
       <button class="modal-header-close" (click)="toggleModal(false)">
-        <svg xmlns="http://www.w3.org/2000/svg" width="31.122" height="31.122" viewBox="0 0 31.122 31.122">
-          <path id="plus"
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="31.122"
+          height="31.122"
+          viewBox="0 0 31.122 31.122"
+        >
+          <path
+            id="plus"
             d="M24.131,10.547a.512.512,0,0,0-.507-.508H16.217V2.633a.511.511,0,0,0-.508-.508l-5.161,0a.509.509,0,0,0-.507.507v7.405H2.633a.512.512,0,0,0-.508.508v5.159a.511.511,0,0,0,.508.508H10.04v7.41a.514.514,0,0,0,.507.508l5.161,0a.513.513,0,0,0,.508-.508V16.214h7.407a.511.511,0,0,0,.508-.508Z"
-            transform="translate(15.562 -3.005) rotate(45)" fill="#fff" />
+            transform="translate(15.562 -3.005) rotate(45)"
+            fill="#fff"
+          />
         </svg>
       </button>
     </header>
     <div class="modal-body">
-      <form (ngSubmit)="onSubmit()">
-        <div class="modal-input-wrap">
-          <label for="priority">Priority</label>
+      <form>
+        <div class="modal-input-wrap priority">
+          <!-- <label for="priority">Priority</label> -->
           <!-- priority -->
           <!-- [disabled]="prioritystate" -->
-          <button id="priorityHigh" class="modal-input-priority" (click)="setPriority('High')">
-            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="46" height="46"
-              viewBox="0 0 46 46">
-              <defs>
-                <linearGradient id="linear-gradient" x1="1" x2="0.087" y2="1" gradientUnits="objectBoundingBox">
-                  <stop offset="0" stop-color="#fe1e9a" />
-                  <stop offset="1" stop-color="#fea64c" />
-                </linearGradient>
-                <filter id="icon-priority-h" x="0" y="0" width="46" height="46" filterUnits="userSpaceOnUse">
-                  <feOffset dy="3" input="SourceAlpha" />
-                  <feGaussianBlur stdDeviation="3" result="blur" />
-                  <feFlood flood-opacity="0.149" />
-                  <feComposite operator="in" in2="blur" />
-                  <feComposite in="SourceGraphic" />
-                </filter>
-              </defs>
-              <g transform="matrix(1, 0, 0, 1, 0, 0)" filter="url(#icon-priority-h)">
-                <path id="icon-priority-h-2" data-name="icon-priority-h"
-                  d="M-596-187a13.91,13.91,0,0,1-9.9-4.1A13.907,13.907,0,0,1-610-201a13.909,13.909,0,0,1,4.1-9.9A13.909,13.909,0,0,1-596-215a13.907,13.907,0,0,1,9.9,4.1A13.909,13.909,0,0,1-582-201a13.908,13.908,0,0,1-4.1,9.9A13.908,13.908,0,0,1-596-187Zm-1.641-12.875h4.57V-195h2.344v-11.375h-2.344v4.61h-4.57v-4.61h-2.344V-195h2.344v-4.873Z"
-                  transform="translate(619 221)" fill="url(#linear-gradient)" />
-              </g>
-            </svg>
-          </button>
-          <button id="priorityMedium" class="modal-input-priority" (click)="setPriority('Medium')">
-            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="46" height="46"
-              viewBox="0 0 46 46">
-              <defs>
-                <linearGradient id="linear-gradient" x1="1" x2="0.087" y2="1" gradientUnits="objectBoundingBox">
-                  <stop offset="0" stop-color="#fe1e9a" />
-                  <stop offset="1" stop-color="#fea64c" />
-                </linearGradient>
-                <filter id="icon-priority-m" x="0" y="0" width="46" height="46" filterUnits="userSpaceOnUse">
-                  <feOffset dy="3" input="SourceAlpha" />
-                  <feGaussianBlur stdDeviation="3" result="blur" />
-                  <feFlood flood-opacity="0.149" />
-                  <feComposite operator="in" in2="blur" />
-                  <feComposite in="SourceGraphic" />
-                </filter>
-              </defs>
-              <g transform="matrix(1, 0, 0, 1, 0, 0)" filter="url(#icon-priority-m)">
-                <path id="icon-priority-m-2" data-name="icon-priority-m"
-                  d="M-637-187a13.908,13.908,0,0,1-9.9-4.1A13.908,13.908,0,0,1-651-201a13.91,13.91,0,0,1,4.1-9.9A13.907,13.907,0,0,1-637-215a13.909,13.909,0,0,1,9.9,4.1A13.909,13.909,0,0,1-623-201a13.907,13.907,0,0,1-4.1,9.9A13.909,13.909,0,0,1-637-187Zm3.865-16.47h0l-.234,5.36V-195h2.352v-11.375h-3.079l-2.906,8.25-2.921-8.25h-3.063V-195h2.344v-3.109l-.234-5.359,3.062,8.468h1.61Z"
-                  transform="translate(660 221)" fill="url(#linear-gradient)" />
-              </g>
-            </svg>
-          </button>
-          <button id="priorityLow" class="modal-input-priority" (click)="setPriority('Low')">
-            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="46" height="46"
-              viewBox="0 0 46 46">
-              <defs>
-                <linearGradient id="linear-gradient" x1="1" x2="0.087" y2="1" gradientUnits="objectBoundingBox">
-                  <stop offset="0" stop-color="#fe1e9a" />
-                  <stop offset="1" stop-color="#fea64c" />
-                </linearGradient>
-                <filter id="icon-priority-l" x="0" y="0" width="46" height="46" filterUnits="userSpaceOnUse">
-                  <feOffset dy="3" input="SourceAlpha" />
-                  <feGaussianBlur stdDeviation="3" result="blur" />
-                  <feFlood flood-opacity="0.149" />
-                  <feComposite operator="in" in2="blur" />
-                  <feComposite in="SourceGraphic" />
-                </filter>
-              </defs>
-              <g transform="matrix(1, 0, 0, 1, 0, 0)" filter="url(#icon-priority-l)">
-                <path id="icon-priority-l-2" data-name="icon-priority-l"
-                  d="M-678-187a13.909,13.909,0,0,1-9.9-4.1A13.907,13.907,0,0,1-692-201a13.909,13.909,0,0,1,4.1-9.9A13.909,13.909,0,0,1-678-215a13.907,13.907,0,0,1,9.9,4.1A13.91,13.91,0,0,1-664-201a13.908,13.908,0,0,1-4.1,9.9A13.908,13.908,0,0,1-678-187Zm-2.984-19.375h0V-195h7.32v-1.883h-4.976v-9.492Z"
-                  transform="translate(701 221)" fill="url(#linear-gradient)" />
-              </g>
-            </svg>
 
-          </button>
           <!-- <select [(ngModel)]="newTodo.priority" name="priority">
             <option value="High">High Priority</option>
             <option value="Medium">Medium Priority</option>
             <option value="Low">Low Prioirty</option>
           </select> -->
+
+          <div id="priority-slider">
+            <input
+              type="radio"
+              name="priority"
+              id="1"
+              value="1"
+              ngModel
+              required
+            />
+            <label for="1" data-priority="Low"></label>
+            <input
+              type="radio"
+              name="priority"
+              id="2"
+              value="2"
+              ngModel
+              required
+            />
+            <label for="2" data-priority="Medium"></label>
+            <input
+              type="radio"
+              name="priority"
+              id="3"
+              value="3"
+              ngModel
+              required
+            />
+            <label for="3" data-priority="High"></label>
+            <div id="priority-pos"></div>
+          </div>
         </div>
         <div class="modal-input-wrap">
           <label for="title">Title</label>
-          <input type="text" [(ngModel)]="newTodo.title" name="title" required>
+          <input ngModel type="text" name="title" required />
         </div>
         <div class="modal-input-wrap">
           <label for="description">Description</label>
-          <input type="text" [(ngModel)]="newTodo.description" name="description" required>
+          <input ngModel type="text" name="description" required />
         </div>
         <div class="modal-input-wrap">
           <label for="description">Due Date</label>
@@ -111,9 +85,7 @@
       </form>
     </div>
     <div class="modal-footer">
-      <button class="btn add-todo" type="submit" (click)="createTodo()">
-        Add Todo
-      </button>
+      <button class="btn add-todo" (click)="createTodo()">Add Todo</button>
     </div>
   </div>
 </div>
